# iceberg-ingestion

./: CLAUDE.md  README.md  docker-compose.yml
.claude/skills/: api-implementation.md  healthcare-domain-knowledge.md  python-conventions.md
source/claims-data-simulator/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
source/claims-data-simulator/src/claims_data_simulator/: __init__.py  config.py  main.py
source/claims-data-simulator/src/claims_data_simulator/api/: __init__.py  routes.py  schemas.py
source/claims-data-simulator/src/claims_data_simulator/db/: __init__.py  models.py  repository.py  session.py
source/claims-data-simulator/src/claims_data_simulator/generator/: __init__.py  ids.py  lifecycle.py  new_claim.py  reference.py  types.py
source/claims-data-simulator/src/claims_data_simulator/quality/: __init__.py  inject.py
source/claims-data-simulator/tests/: conftest.py  test_claims_api.py
transformation/claims-ingest/: pyproject.toml
transformation/claims-ingest/src/claims_ingest/: __init__.py  raw__claims.py
transformation/claims-ingest/src/claims_ingest/validation/: claims.py
