[project]
name = "claims-data-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jduran9987", email = "jduran9987@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
claims-data-simulator = "claims_data_simulator:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
