[project]
name = "claims-data-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jduran9987", email = "jduran9987@gmail.com" }
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["uv_build>=0.5,<1"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "testcontainers[postgres]>=4.14.2",
]
